Build Agent Modified DocFX Site

--- a/V1/Troubleshooting/DisasterRecovery_1-0.html
+++ b/V1/Troubleshooting/DisasterRecovery_1-0.html
@@ -97,6 +97,9 @@
 <p><strong>Note:</strong> Windows storage and configuration files are stored in the following locations:</p>
 <p> <em>C:\ProgramData\OSIsoft\EdgeDataStore\Configuration</em></p>
 <p> <em>C:\ProgramData\OSIsoft\EdgeDataStore\Storage</em></p>
+<p> Stream data files are stored in the following locations:</p>
+<p> Default namespace: <em>C:\ProgramData\OSIsoft\EdgeDataStore\Storage\data\default\default</em></p>
+<p> Diagnostics namespace: <em>C:\ProgramData\OSIsoft\EdgeDataStore\Storage\data\default\diagnostics</em></p>
 <p> The ProgramData folder is typically hidden; to view it, go to the <strong>View</strong> tab in <strong>Windows Explorer</strong> and select the <strong>Hidden Items</strong> check box.</p>
 </li>
 <li><p>Create a zip or tar file containing the storage and configuration directories, and move it to a USB device or other safe location. File transfer can be done with WinSCP, SFTP, or external device.</p>
@@ -137,6 +140,9 @@
 <p><strong>Note:</strong> Linux storage and configuration files are stored in the following locations:</p>
 <p> <em>/usr/share/OSIsoft/EdgeDataStore/Configuration</em></p>
 <p> <em>/usr/share/OSIsoft/EdgeDataStore/Storage</em></p>
+<p> Stream data files are stored in the following locations:</p>
+<p> Default namespace: <em>/usr/share/OSIsoft/EdgeDataStore/Storage/data/default/default</em></p>
+<p> Diagnostics namespace: <em>/usr/share/OSIsoft/EdgeDataStore/Storage/data/default/diagnostics</em></p>
 </li>
 <li><p>Create a zip or tar file containing the storage and configuration directories, and move it to a USB device or other safe location. Use WinSCP, SFTP, or the external device to transfer the file.</p>
 <p><strong>Note:</strong> Using the <em>cp</em> command may result in a change in file ownership to the current user. </p>
