--- a/V1/OpcUa/OPCUADataSourceConfiguration_1-0.html
+++ b/V1/OpcUa/OPCUADataSourceConfiguration_1-0.html
@@ -124,7 +124,7 @@
 <td>Required</td>
 <td><code>string</code></td>
 <td>Yes</td>
-<td>The endpoint URL of the OPC UA server. The following is an example of the URL format: opc.tcp://OPCServerHost:Port/OpcUa/SimulationServer<br><br><strong>Note:</strong> If you change the EndpointURL on a configured OPC UA EDS adapter instance that has ComponentID_DataSelection.json file exported, remove the <em>ComponentID_DataSelection.json</em> file from the configuration directory to trigger a new browse (export).</td>
+<td>The endpoint URL of the OPC UA server. The following is an example of the URL format: opc.tcp://OPCServerHost:Port/OpcUa/SimulationServer<br><br><strong>Note:</strong> If you change the EndpointURL on a configured OPC UA EDS adapter instance that has <em>ComponentID_DataSelection.json</em> file exported, remove the file from the configuration directory to trigger a new browse (export).</td>
 </tr>
 <tr>
 <td><strong>UseSecureConnection</strong></td>
