Build Agent Modified DocFX Site

--- a/content/index.html
+++ b/content/index.html
@@ -116,6 +116,7 @@
 
 - [Overview](xref:EdgeDataStoreOverview)
   - [Design considerations](xref:scalePerformance)
+  - [Performance](xref:Performance)
   - [Security](xref:security)
 - [Quick start guides](xref:QuickStartGuides)
   - [OPC UA EDS adapter quick start](xref:opcUaQuickStart)
