--- a/content/toc.html
+++ b/content/toc.html
@@ -17,7 +17,7 @@
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="design/scale-performance.md" name="" title="Design considerations">Design considerations</a>
+                              <a href="overview/scale-performance.html" name="" title="Design considerations">Design considerations</a>
                           </li>
                           <li>
                               <a href="overview/performance.html" name="" title="Performance">Performance</a>
