Build Agent Modified DocFX Site

--- a/content/administration/management-tools.html
+++ b/content/administration/management-tools.html
@@ -80,7 +80,7 @@
 
 <p>Edge Data Store and adapters can be configured with either the EdgeCmd utility, OSIsoft&#39;s proprietary tool for configuring EDS and adapters, or commonly-used REST tools.</p>
 <h2 id="edgecmd-utility">EdgeCmd utility</h2>
-<p>The EdgeCmd utility enables EDS and adapter configuration on both Linux and Windows operating systems. For more information on using the EdgeCmd utility, see the <a href="https://osisoft.github.io/Edgecmd-Docs/v1.0/edgecmd-utility.html">EdgeCmd utility help</a>.</p>
+<p>The EdgeCmd utility enables EDS and adapter configuration on both Linux and Windows operating systems. For more information on using the EdgeCmd utility, see the <a href="https://osisoft.github.io/EdgeCmd-Docs/content/index.html">EdgeCmd utility help</a>.</p>
 <h2 id="rest-tools">REST tools</h2>
 <p>The following tools can be used to make REST calls.</p>
 <h3 id="curl">curl</h3>
