--- a/README.html
+++ b/README.html
@@ -72,7 +72,7 @@
 <h1 id="edge-data-store">Edge Data Store</h1>
 
 <p>Edge Data Store (EDS) is a lightweight data collection and storage application designed to capture data at the edge of networks for historical storage and analysis.</p>
-<p>This repository contains the documentation for Edge Data Store. You can access a readable version of this documentation <a href="https://osisoft.github.io/Edge-Data-Store-Docs/content/">here</a>.</p>
+<p>This repository contains the documentation for Edge Data Store. You can access a readable version of this documentation <a href="https://docs.osisoft.com/bundle/edge-data-store/">here</a>.</p>
 <h2 id="license">License</h2>
 <p><a href="https://www.osisoft.com/copyright/">© 2020 - 2021 OSIsoft, LLC. All rights reserved.</a></p>
 <p>Licensed under the Apache License, Version 2.0 (the &quot;License&quot;); you may not use this file except in compliance with the License. You may obtain a copy of the License at:</p>
