--- a/content/egress/egress-execution-details.html
+++ b/content/egress/egress-execution-details.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="refresh" content="1; url=https://docs.osisoft.com/bundle/edge-data-store/page/index.html"/>
     <title>Egress execution details </title>
     <meta name="viewport" content="width=device-width">
     <meta name="title" content="Egress execution details ">
