--- a/content/linux-windows/linux-windows.html
+++ b/content/linux-windows/linux-windows.html
@@ -5,6 +5,7 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta http-equiv="refresh" content="1; url=https://docs.osisoft.com/bundle/edge-data-store/page/index.html"/>
     <title>Linux and Windows platform differences </title>
     <meta name="viewport" content="width=device-width">
     <meta name="title" content="Linux and Windows platform differences ">
