Build Agent Modified DocFX Site

--- a/content/release-notes/release-notes-eds.html
+++ b/content/release-notes/release-notes-eds.html
@@ -75,7 +75,7 @@
         </div>
         <div class="article row grid-right">
           <div class="col-md-10">
-            <article class="content wrap" id="_content" data-uid="releaseNotes">
+            <article class="content wrap" id="_content" data-uid="ReleaseNotesEDS">
 <h1 id="edge-data-store-2023-release-notes">Edge Data Store 2023 release notes</h1>
 
 <p>Edge Data Store (EDS) is a lightweight data collection and storage application designed to capture data at the edge of networks for historical storage and analysis. It runs on small, rugged devices or embedded in existing industrial hardware and is designed to be resilient and require minimal installation and administration.</p>
@@ -281,7 +281,7 @@
               <div class="contribution">
                 <ul class="nav">
                   <li>
-                    <a href="https://github.com/osisoft/Edge-Data-Store-Docs/blob/main/content/release-notes/release-notes.md/#L1" class="contribution-link">Improve this Doc</a>
+                    <a href="https://github.com/osisoft/Edge-Data-Store-Docs/blob/main/content/release-notes/release-notes-eds.md/#L1" class="contribution-link">Improve this Doc</a>
                   </li>
                 </ul>
               </div>
