Build Agent Modified DocFX Site

--- a/content/toc.html
+++ b/content/toc.html
@@ -391,7 +391,17 @@
                     </ul>
                 </li>
                 <li>
+                    <span class="expand-stub"></span>
                     <a></a>
+                    
+                    <ul class="nav level2">
+                          <li>
+                              <a href="release-notes/release-notes-eds.html" name="" title="Edge Data Store 2023 release notes">Edge Data Store 2023 release notes</a>
+                          </li>
+                          <li>
+                              <a href="release-notes/release-notes-eds-module.html" name="" title="Edge Data Store 2023 (Module) release notes">Edge Data Store 2023 (Module) release notes</a>
+                          </li>
+                    </ul>
                 </li>
                 <li>
                     <a href="feedback.html" name="" title="Technical support and feedback">Technical support and feedback</a>
