Build Agent Modified DocFX Site

--- a/content/toc.html
+++ b/content/toc.html
@@ -396,7 +396,7 @@
                     
                     <ul class="nav level2">
                           <li>
-                              <a href="release-notes/release-notes-eds.html" name="" title="Edge Data Store 2023 release notes">Edge Data Store 2023 release notes</a>
+                              <a href="release-notes/release-notes-eds.html" name="" title="Edge Data Store 2023 Patch 1 release notes">Edge Data Store 2023 Patch 1 release notes</a>
                           </li>
                           <li>
                               <a href="release-notes/release-notes-eds-module.html" name="" title="Edge Data Store 2023 (Module) release notes">Edge Data Store 2023 (Module) release notes</a>
