--- a/content/release-notes/release-notes-eds-module.html
+++ b/content/release-notes/release-notes-eds-module.html
@@ -166,10 +166,22 @@
 <td>270854</td>
 <td>Fixed an issue that caused data to be collected for selection items with <code>&quot;selected&quot;: false</code>.</td>
 </tr>
+<tr>
+<td>386061</td>
+<td>Fixed an issue where OMF type conflicts when egressing to the AVEVA System caused data to be sent repeatedly.</td>
+</tr>
+<tr>
+<td>373300</td>
+<td>Fixed an issue that caused EDS to not respect some egress configuration updates until EDS is restarted.</td>
+</tr>
+<tr>
+<td>374875</td>
+<td>Fixed an issue that caused egress to stop processing when exceptions are raised.</td>
+</tr>
 </tbody>
 </table>
 <h2 id="known-issues">Known issues</h2>
-<p>Some EDS egress configuration changes are not respected until EDS is restarted.</p>
+<p>No known issues.</p>
 <h2 id="upgrade-considerations">Upgrade considerations</h2>
 <p>This is a list of known changes in Edge Data Store 2023 that may be relevant to upgrading customers.</p>
 <ul>
@@ -264,13 +276,13 @@
 </table>
 <h2 id="distribution-kit-files">Distribution kit files</h2>
 <ul>
-<li><p>EdgeDataStore_1.1.1.46-arm_.deb</p>
+<li><p>EdgeDataStore_1.1.3.2-arm_.deb</p>
 </li>
-<li><p>EdgeDataStore_1.1.1.46-arm64_.deb</p>
+<li><p>EdgeDataStore_1.1.3.2-arm64_.deb</p>
 </li>
-<li><p>EdgeDataStore_1.1.1.46-x64_.deb</p>
+<li><p>EdgeDataStore_1.1.3.2-x64_.deb</p>
 </li>
-<li><p>EdgeDataStore_1.1.1.46-x64_.msi</p>
+<li><p>EdgeDataStore_1.1.3.2-x64_.msi</p>
 </li>
 </ul>
 </article>
