Build Agent Modified DocFX Site

--- a/content/configuration/system-health-endpoints-configuration.html
+++ b/content/configuration/system-health-endpoints-configuration.html
@@ -89,7 +89,7 @@
 </li>
 <li><p>Update the parameters as needed. For a table of all available parameters, see <a href="#parameters">Parameters</a>.</p>
 </li>
-<li><p>Save the file with the name <em>System_HealthEndpoints..json</em>.</p>
+<li><p>Save the file with the name <em>System_HealthEndpoints.json</em>.</p>
 </li>
 <li><p>Use any tool capable of making HTTP requests to execute a POST command with the contents of that file to the following endpoint: <code>http://localhost:5590/api/v1/configuration/System/HealthEndpoints</code>, updating the port number if needed.</p>
 <p> Examples using curl and EdgeCmd (run this command from the same directory where the file is located):</p>
