--- a/content/egress/manual-egress.html
+++ b/content/egress/manual-egress.html
@@ -147,7 +147,7 @@
 <td><strong>EndIndex</strong></td>
 <td>Optional</td>
 <td>string</td>
-<td>Identifies the last data point to transfer. If <code>null</code>, it is interpreted as the date and time egress is scheduled to start. Valid formats are: UTC: <code>yyyy-mm-ddThh:mm:ssZ</code>, Local: <code>yyyy-mm-ddThh:mm:ss</code>, and Relative: <code>+d.hh:mm:ss.##</code>. <br>Relative time strings are calculated based on the <strong>StartIndex</strong>. Relative time strings must be positive to ensure a range of data is selected for egress.</td>
+<td>Identifies the last data point to transfer. If <code>null</code>, it is interpreted as the date and time egress is scheduled to end. Valid formats are: UTC: <code>yyyy-mm-ddThh:mm:ssZ</code>, Local: <code>yyyy-mm-ddThh:mm:ss</code>, and Relative: <code>+d.hh:mm:ss.##</code>. <br>Relative time strings are calculated based on the <strong>StartIndex</strong>. Relative time strings must be positive to ensure a range of data is selected for egress.</td>
 </tr>
 <tr>
 <td><strong>DataSelectors</strong></td>
