--- a/content/configuration/system-health-endpoints-configuration.html
+++ b/content/configuration/system-health-endpoints-configuration.html
@@ -195,16 +195,12 @@
     {
         &quot;endpoint&quot;: &quot;https://&lt;pi web api server&gt;/piwebapi/omf/&quot;,
         &quot;UserName&quot;: &quot;&lt;username&gt;&quot;,
-        &quot;Password&quot;: &quot;&lt;password&gt;&quot;,
-        &quot;buffering&quot;: &quot;none&quot;,
-        &quot;maxBufferSizeMB&quot;: 0
+        &quot;Password&quot;: &quot;&lt;password&gt;&quot;
     },
     {
         &quot;Endpoint&quot;: &quot;https://&lt;AVEVA Data Hub OMF endpoint&gt;&quot;,
         &quot;ClientId&quot;: &quot;&lt;clientid&gt;&quot;,
-        &quot;ClientSecret&quot;: &quot;&lt;clientsecret&gt;&quot;,
-        &quot;buffering&quot;: &quot;disk&quot;,
-        &quot;maxBufferSizeMB&quot;: 0
+        &quot;ClientSecret&quot;: &quot;&lt;clientsecret&gt;&quot;
     }
 ]
 </code></pre></article>
