--- a/content/toc.html
+++ b/content/toc.html
@@ -392,7 +392,7 @@
                 </li>
                 <li>
                     <span class="expand-stub"></span>
-                    <a></a>
+                    <a href="release-notes/release-notes.html" name="" title="Release notes">Release notes</a>
                     
                     <ul class="nav level2">
                           <li>
