Build Agent Modified DocFX Site

--- a/content/diagnostics/diagnostics.html
+++ b/content/diagnostics/diagnostics.html
@@ -214,7 +214,7 @@
 <tr>
 <td>double</td>
 <td>IORate</td>
-<td>10-minute rolling average of data rate (streams/second)</td>
+<td>10-minute rolling average of data rate (event/s)</td>
 </tr>
 </tbody>
 </table>
@@ -237,7 +237,7 @@
 <tr>
 <td>double</td>
 <td>ErrorRate</td>
-<td>10-minute rolling average of error rate (streams/second)</td>
+<td>10-minute rolling average of error rate (event/s)</td>
 </tr>
 </tbody>
 </table>
@@ -361,7 +361,7 @@
 <tr>
 <td>double</td>
 <td>IORate</td>
-<td>10-minute rolling average of data rate (streams/second)</td>
+<td>10-minute rolling average of data rate (event/s)</td>
 </tr>
 </tbody>
 </table>
