Build Agent Modified DocFX Site

--- a/content/edge-data-store.html
+++ b/content/edge-data-store.html
@@ -105,7 +105,7 @@
 <li><p>Data Storage – Stores data locally until it can be egressed</p>
 </li>
 <li><p>Data egress – Sends data from storage to PI Server or AVEVA Data Hub</p>
-<p><strong>Note:</strong> EDS also supports OSIsoft Cloud Services as an egress destination.</p>
+<p><strong>Note:</strong> EDS also supports AVEVA Data Hub as an egress destination.</p>
 </li>
 <li><p>Health – Records health information of components and sends it to PI Server or AVEVA Data Hub</p>
 </li>
