--- a/content/feedback.html
+++ b/content/feedback.html
@@ -80,10 +80,10 @@
 
 <p>OSIsoft provides several ways to report issues and provide feedback on Edge Data Store.</p>
 <h2 id="technical-support">Technical support</h2>
-<p>For technical assistance with Edge Data Store, contact OSIsoft Technical Support through the <a href="https://customers.osisoft.com/s/createcase">OSIsoft Customer Portal</a>. The Technical Support team will respond to resolve your issue. Remote access to your facilities may be necessary during the session.</p>
-<p><strong>Note:</strong>  You must have an account set up in the <a href="https://my.osisoft.com/">OSIsoft Customer Portal</a> before you can open a support case. If you do not have a portal account, see <a href="https://explore.osisoft.com/myosisoft-customer-portal/how-to-get-a-login">How to Get a Login to OSIsoft Customer Portal</a>.</p>
-<p>Alternatively, call OSIsoft Technical Support at +1 510-297-5828.</p>
-<p>When contacting OSIsoft Technical Support, provide the following information to enable timely resolution of your issue:</p>
+<p>For technical assistance with Edge Data Store, contact AVEVA PI Support through the <a href="https://customers.osisoft.com/s/createcase">AVEVA Customer Portal</a>. The Technical Support team will respond to resolve your issue. Remote access to your facilities may be necessary during the session.</p>
+<p><strong>Note:</strong>  You must have an account set up in the <a href="https://my.osisoft.com/">AVEVA Customer Portal</a> before you can open a support case. If you do not have a portal account, see <a href="https://explore.osisoft.com/myosisoft-customer-portal/how-to-get-a-login">How to Get a Login to AVEVA Customer Portal</a>.</p>
+<p>Alternatively, call AVEVA PI Support at +1 510-297-5828.</p>
+<p>When contacting AVEVA PI Support, provide the following information to enable timely resolution of your issue:</p>
 <ul>
 <li><p>Product name, version, and build numbers</p>
 </li>
