--- a/content/shared-content/shared-content/installation/upgrade-the-adapter.html
+++ b/content/shared-content/shared-content/installation/upgrade-the-adapter.html
@@ -82,7 +82,7 @@
 <h2 id="windows-upgrade">Windows upgrade</h2>
 <p>Complete the following steps to upgrade a PI adapter on a Windows computer:</p>
 <ol>
-<li><p>Download <code>&lt;INSTALLER_NAME&gt;-x64_.msi</code> from the <a href="https://customers.osisoft.com/s/products">OSIsoft Customer Portal</a>.</p>
+<li><p>Download <code>&lt;INSTALLER_NAME&gt;-x64_.msi</code> from the <a href="https://customers.osisoft.com/s/products">AVEVA Customer Portal</a>.</p>
 <p> <strong>Note:</strong> Customer login credentials are required to access the portal.</p>
 </li>
 <li><p>Run <code>&lt;INSTALLER_NAME&gt;-x64_.msi</code>.</p>
@@ -102,7 +102,7 @@
 <h2 id="linux-upgrade">Linux upgrade</h2>
 <p>Complete the following steps to upgrade a PI adapter on a Linux computer:</p>
 <ol>
-<li><p>Download the appropriate Linux distribution file from the <a href="https://customers.osisoft.com/s/products">OSIsoft Customer Portal</a>.</p>
+<li><p>Download the appropriate Linux distribution file from the <a href="https://customers.osisoft.com/s/products">AVEVA Customer Portal</a>.</p>
 <p> <strong>Note:</strong> Customer login credentials are required to access the portal.</p>
 </li>
 <li><p>Open a terminal session.</p>
