--- a/content/shared-content/shared-content/troubleshooting/troubleshooting.html
+++ b/content/shared-content/shared-content/troubleshooting/troubleshooting.html
@@ -78,7 +78,7 @@
             <article class="content wrap" id="_content" data-uid="TroubleshootTheAdapter">
 <h1 id="troubleshooting">Troubleshooting</h1>
 
-<p>PI adapters provide features for troubleshooting issues related to connectivity, data flow, and configuration. Resources include adapter logs and the Wireshark troubleshooting tool. If you are still unable to resolve issues or need additional guidance, contact OSIsoft Technical Support through the <a href="https://my.osisoft.com/">OSIsoft Customer Portal</a>.</p>
+<p>PI adapters provide features for troubleshooting issues related to connectivity, data flow, and configuration. Resources include adapter logs and the Wireshark troubleshooting tool. If you are still unable to resolve issues or need additional guidance, contact AVEVA PI Support through the <a href="https://my.osisoft.com/">AVEVA Customer Portal</a>.</p>
 <p><strong>Note:</strong> Make sure to also check the troubleshooting information specific to your adapter in this user guide.</p>
 <h2 id="logs">Logs</h2>
 <p>Messages from the System and OmfEgress logs provide information on the status of the adapter. For example, they show if a connection from the adapter to an egress endpoint exists.</p>
