--- a/content/troubleshooting/troubleshooting.html
+++ b/content/troubleshooting/troubleshooting.html
@@ -184,7 +184,7 @@
 </tbody>
 </table>
 <h2 id="additional-resources">Additional resources</h2>
-<p>For information about specific log messages and possible resolutions, refer to the <a href="https://my.osisoft.com/">OSIsoft Customer Portal</a>.</p>
+<p>For information about specific log messages and possible resolutions, refer to the <a href="https://my.osisoft.com/">AVEVA Customer Portal</a>.</p>
 </article>
           </div>
           
