--- a/content/egress/egress.html
+++ b/content/egress/egress.html
@@ -90,7 +90,7 @@
 </li>
 </ul>
 <p>Periodic egress ensures that all the data EDS collects is sent to permanent storage on a regular basis. Manual egress gives you the flexibility to retrieve data whenever you need it. For example, say you have EDS configured to collect data on a wind turbine. You configure periodic egress to send data to AVEVA Data Hub every Friday at noon. A strong storm passes through the area of the wind turbine over the weekend, and you do not want to wait until Friday afternoon to review what occurred with the turbine during the storm. You send a manual egress request to EDS to send the weekend data to AVEVA Data Hub, so that you can start analyzing the data today.</p>
-<p><strong>Note:</strong> OSIsoft Cloud Services is also supported as an egress destination. The setup process is similar to AVEVA Data Hub.</p>
+<p><strong>Note:</strong> AVEVA Data Hub is also supported as an egress destination. The setup process is similar to AVEVA Data Hub.</p>
 </article>
           </div>
           
