--- a/content/shared-content/shared-content/technical-support-and-feedback.html
+++ b/content/shared-content/shared-content/technical-support-and-feedback.html
@@ -78,12 +78,12 @@
             <article class="content wrap" id="_content" data-uid="TechnicalSupportAndFeedback">
 <h1 id="technical-support-and-feedback">Technical support and feedback</h1>
 
-<p>OSIsoft provides several ways to report issues and provide feedback on PI Adapters.</p>
+<p>OSIsoft provides several ways to report issues and provide feedback on AVEVA Adapters.</p>
 <h2 id="technical-support">Technical support</h2>
-<p>For technical assistance with PI Adapters, contact OSIsoft Technical Support through the <a href="https://my.osisoft.com/">OSIsoft Customer Portal</a>. We can help you identify the problem, provide workarounds and address any concerns you may have. Remote access to your facilities may be necessary during the session.</p>
-<p><strong>Note:</strong>  You must have an account set up in the <a href="https://my.osisoft.com/">OSIsoft Customer Portal</a> before you can open a case. If you do not have a portal account, see <a href="https://explore.osisoft.com/myosisoft-customer-portal/how-to-get-a-login">How to Get a Login to OSIsoft Customer Portal</a>.</p>
-<p>Alternatively, call OSIsoft Technical Support at +1 510-297-5828.</p>
-<p>When you contact OSIsoft Technical Support, be prepared to provide this information:</p>
+<p>For technical assistance with AVEVA Adapters, contact AVEVA PI Support through the <a href="https://my.osisoft.com/">AVEVA Customer Portal</a>. We can help you identify the problem, provide workarounds and address any concerns you may have. Remote access to your facilities may be necessary during the session.</p>
+<p><strong>Note:</strong>  You must have an account set up in the <a href="https://my.osisoft.com/">AVEVA Customer Portal</a> before you can open a case. If you do not have a portal account, see <a href="https://explore.osisoft.com/myosisoft-customer-portal/how-to-get-a-login">How to Get a Login to AVEVA Customer Portal</a>.</p>
+<p>Alternatively, call AVEVA PI Support at +1 510-297-5828.</p>
+<p>When you contact AVEVA PI Support, be prepared to provide this information:</p>
 <ul>
 <li>Product name, version, and build numbers</li>
 <li>Details about your computer platform (CPU type, operating system, and version number)</li>
@@ -92,11 +92,11 @@
 <li>Details of any environment changes prior to the start of the issue</li>
 <li>Summary of the issue, including any relevant log files during the time the issue occurred</li>
 </ul>
-<!--To view a brief primer on PI Adapters, see the [PI Adapters playbook](https://customers.osisoft.com/s/knowledgearticle?knowledgeArticleUrl=Playbook-PI-adapters) in the OSIsoft Customer Portal.-->
+<!--To view a brief primer on AVEVA Adapters, see the [AVEVA Adapters playbook](https://customers.osisoft.com/s/knowledgearticle?knowledgeArticleUrl=Playbook-PI-adapters) in the AVEVA Customer Portal.-->
 <h2 id="product-feedback">Product feedback</h2>
-<p>To submit product feedback for PI Adapters, visit the <a href="https://feedback.osisoft.com/forums/930280-pi-adapters">PI Adapters feedback page</a>. The product team at OSIsoft regularly monitors the page.</p>
+<p>To submit product feedback for AVEVA Adapters, visit the <a href="https://feedback.osisoft.com/forums/930280-pi-adapters">AVEVA Adapters feedback page</a>. The product team at OSIsoft regularly monitors the page.</p>
 <h2 id="documentation-feedback">Documentation feedback</h2>
-<p>To submit documentation feedback for PI Adapters, send an email to <a href="mailto:documentation@osisoft.com?subject=PI%20adapter%20documentation&amp;body=Product%20name%20and%20version%20-%20Documentation%20topic%20URL%20-%20Details%20of%20the%20suggestion%20or%20error">documentation@osisoft.com</a>. Be sure to include the following information with your feedback:</p>
+<p>To submit documentation feedback for AVEVA Adapters, send an email to <a href="mailto:documentation@osisoft.com?subject=PI%20adapter%20documentation&amp;body=Product%20name%20and%20version%20-%20Documentation%20topic%20URL%20-%20Details%20of%20the%20suggestion%20or%20error">documentation@osisoft.com</a>. Be sure to include the following information with your feedback:</p>
 <ul>
 <li>Product name and version</li>
 <li>Documentation topic URL</li>
